Configurar informes por tipo(Solo sms)